--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "zip": "cd dist && zip -r paradify.zip ."
   },
   "dependencies": {
+    "antd": "^4.16.0",
+    "array-move": "^3.0.1",
     "axios": "^0.21.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-shadow": "^19.0.2",
+    "react-sortable-hoc": "^2.0.0",
+    "react-ticker": "^1.2.2",
     "to-string-loader": "^1.1.6"
   },
   "devDependencies": {
@@ -51,6 +55,8 @@
     "git-cz": "^4.7.6",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^4.1.1",
+    "less-loader": "^7.3.0",
     "lint-staged": "^10.5.2",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
