--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,11 +17,9 @@
     "page": "background.html"
   },
   "icons": {
-    "128": "media/128.png"
+    "128": "128.png"
   },
-  "browser_action": {
-    "default_popup": "popup.html"
-  },
-  "web_accessible_resources": ["media/*"],
+  "browser_action": {},
+  "web_accessible_resources": ["*"],
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self';"
 }
