--- a/src/defaultConfigs.json
+++ b/src/defaultConfigs.json
@@ -5,18 +5,14 @@
   "greencolor": "#00ff00",
   "textcolor": "#ffffff",
   "favoritestocks": [
-    "AAPL",
-    "DIA",
-    "MSFT",
-    "AMZN",
-    "GOOG",
     "SPY",
-    "GOLD",
-    "TESLA",
-    "PBFX",
-    "GE",
+    "QQQ",
     "FB",
-    "MSFT"
+    "AMZN",
+    "AAPL",
+    "NFLX",
+    "MSFT",
+    "TSLA"
   ],
   "typeBar": "scrolling",
   "allwebsites": "all",
