--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,6 +8,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
+      "css": ["content.css"],
       "js": ["content.bundle.js"],
       "run_at": "document_end"
     }
